wrap fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -369,7 +369,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap; /*quitar*/
+    flex-wrap: wrap; 
     align-content: center;
     padding: 2rem;
     width: 100%;
@@ -487,6 +487,7 @@ h3 {
 
 .footer {
     display: flex;
+    flex-wrap: wrap; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
